--- a/templates/productos.html
+++ b/templates/productos.html
@@ -94,7 +94,7 @@
       </div>
       <div class="footer__logo">
         <div class="logo">
-          <img src="../banner/logo.png" alt="Logo Engranajes" class="nav__img">
+          <img src="../banner/logo.png" alt="Logo Engranajes" class="logo__img">
           <p>Embragues Independencia</p>
         </div>
       </div>
