--- a/scss/productos/productos.scss
+++ b/scss/productos/productos.scss
@@ -1,5 +1,4 @@
-@import url(style.css);
-
+@import url(../../Css/style.css);
 .product-container{
     width: 90%;
     margin: auto;
@@ -125,17 +124,19 @@
     }
     .product-type{
         height: auto;
-    }
+    } 
     .intro-img{
-        background:url(../banner/fondo_producto.jpg);
-        backdrop-filter: blur(10px);
+        background:url(../../banner/fondo_producto.jpg);
         background-position: center;
         background-repeat: no-repeat;
         background-size: cover;
         min-width: 100%;
-        padding: 15px 0;
         box-shadow: 0px 1px 4px #0f0f0f;
         background-origin: border-box;
+    }
+    .intro-img img{
+        backdrop-filter: blur(3px);
+        background-size: cover;
     }
     .article{
         justify-items: center;
