--- a/templates/productos.html
+++ b/templates/productos.html
@@ -8,7 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link rel="stylesheet" href="../Css/reset.css/reset.css">
     <link rel="shortcut icon" href="../banner/logo.png" type="image/x-icon">
-    <link rel="stylesheet" href="../Css/productos.css">
+    <link rel="stylesheet" href="../Css/productos/productos.css">
 </head>
 <body>
   <header class="header">
