--- a/scss/_products.scss
+++ b/scss/_products.scss
@@ -51,7 +51,7 @@
                     }
                     .intro__text{
                         line-height: 25px;
-                        color: #887;
+                        color: $sombrasBordes;
                     }
                     a{
                         align-self: center;
