--- a/Css/contacto/contacto.css
+++ b/Css/contacto/contacto.css
@@ -503,4 +503,256 @@ body {
   }
 }
 
-/*# sourceMappingURL=style.css.map */
+.contact__title {
+  height: 5em;
+  width: 100%;
+  background: #ccc;
+  margin-bottom: 1em;
+  border-bottom-left-radius: 50px;
+}
+.contact__title .contact__h2 {
+  padding-top: 0.3em;
+  font-size: 2em;
+  line-height: 1.5em;
+  margin-left: 5%;
+}
+.contact__title .contact__h2::after {
+  content: " ";
+  width: 45px;
+  height: 5px;
+  background-color: #51A3E1;
+  display: block;
+}
+
+.form__title {
+  color: #126482;
+  font-size: 1.5em;
+  font-weight: bold;
+}
+
+.contact__container {
+  background: url(../../banner/direccion.png);
+  height: 55em;
+  background-repeat: no-repeat;
+  width: 100%;
+  background-size: contain;
+  /* position: relative; */
+}
+@media screen and (max-width: 1200px) {
+  .contact__container {
+    height: 70rem;
+  }
+}
+@media screen and (max-width: 576px) {
+  .contact__container {
+    height: 60rem;
+  }
+}
+.contact__container .form {
+  background: #fff;
+  width: 70%;
+  margin: auto;
+  height: 70vh;
+  border: 2px solid #ccc;
+  position: absolute;
+  left: 15%;
+  top: 75%;
+  display: flex;
+  align-items: center;
+}
+@media screen and (max-width: 1200px) {
+  .contact__container .form {
+    flex-direction: column;
+    height: 50rem;
+    top: 60%;
+    justify-content: space-evenly;
+  }
+}
+@media screen and (max-width: 576px) {
+  .contact__container .form {
+    position: relative;
+    width: 100%;
+    left: 0%;
+    top: 20%;
+  }
+}
+
+.consult {
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  justify-content: space-evenly;
+  padding: 0 20px;
+}
+@media screen and (max-width: 1200px) {
+  .consult {
+    width: 60%;
+    height: 20rem;
+    padding: 0;
+  }
+}
+@media screen and (max-width: 992px) {
+  .consult {
+    width: 80%;
+  }
+}
+@media screen and (max-width: 870px) {
+  .consult {
+    height: auto;
+  }
+}
+@media screen and (max-width: 768px) {
+  .consult {
+    width: 80%;
+  }
+}
+.consult .form__container {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(2, 3em) 6em 1.5em;
+  height: 60%;
+  width: 80%;
+  gap: 0.8em;
+}
+@media screen and (max-width: 1200px) {
+  .consult .form__container {
+    width: 100%;
+  }
+}
+@media screen and (max-width: 870px) {
+  .consult .form__container {
+    display: inline-block;
+    height: auto;
+  }
+}
+.consult .form__container .form__input {
+  width: 100%;
+  height: 3em;
+}
+@media screen and (max-width: 870px) {
+  .consult .form__container .form__input {
+    height: auto;
+    margin: 10px auto;
+  }
+}
+@media screen and (max-width: 992px) {
+  .consult .form__container .form__input label {
+    width: 100%;
+  }
+}
+@media screen and (max-width: 870px) {
+  .consult .form__container .form__input label {
+    display: flex;
+    flex-direction: column;
+    gap: 3px;
+  }
+}
+.consult .form__container .form__input label input {
+  border: none;
+  border-bottom: 2px solid #51A3E1;
+}
+.consult .form__container .form__input label input:focus {
+  outline: none !important;
+  background: linear-gradient(to bottom, transparent, #887);
+}
+@media screen and (max-width: 1200px) {
+  .consult .form__container .form__input label input {
+    width: 100%;
+  }
+}
+.consult .form__container .formName {
+  grid-column: 1/2;
+  grid-row: 1/2;
+}
+.consult .form__container .formLastName {
+  grid-column: 2/3;
+  grid-row: 1/2;
+}
+.consult .form__container .formEmail {
+  grid-column: 1/2;
+  grid-row: 2/3;
+}
+.consult .form__container .formPhone {
+  grid-column: 2/3;
+  grid-row: 2/3;
+}
+.consult .form__container .formQuery {
+  grid-column: 1/3;
+  grid-row: 3/4;
+}
+.consult .form__container .formQuery label {
+  width: 100%;
+}
+.consult .form__container .formQuery label textarea {
+  border: none;
+  border-bottom: 2px solid #51A3E1;
+  width: 100%;
+  height: 5em;
+  resize: none;
+}
+.consult .form__container .formQuery label textarea:focus {
+  outline: none !important;
+  background: linear-gradient(to bottom, transparent, #887);
+}
+.consult .form__container .formButton {
+  grid-column: 2/3;
+  grid-row: 4/5;
+  width: 70%;
+  margin-left: 30%;
+  border: none;
+}
+@media screen and (max-width: 1200px) {
+  .consult .form__container .formButton {
+    grid-column: 1/3;
+    justify-self: center;
+    align-self: center;
+    margin: 0;
+  }
+}
+@media screen and (max-width: 870px) {
+  .consult .form__container .formButton {
+    margin: 5px 0 0 25%;
+    width: 50%;
+  }
+}
+
+.address {
+  width: 50%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  padding: 55px 20px;
+  position: relative;
+}
+@media screen and (max-width: 1200px) {
+  .address {
+    margin-top: 1rem;
+    width: 60%;
+    height: 20rem;
+    padding: 0;
+  }
+}
+@media screen and (max-width: 992px) {
+  .address {
+    width: 80%;
+  }
+}
+.address .address__description {
+  margin-top: 11%;
+  line-height: 1.7em;
+}
+@media screen and (max-width: 1200px) {
+  .address .address__description {
+    margin-top: 3%;
+  }
+}
+.address .address__description span {
+  font-weight: bold;
+}
+.address .address__description > p:last-child {
+  color: #DB6221;
+}
+
+/*# sourceMappingURL=contacto.css.map */
