--- a/scss/_derechos.scss
+++ b/scss/_derechos.scss
@@ -4,7 +4,7 @@
     flex-direction: column;
     align-items: end;
     font-size: 14px;
-    color: #aaa;
+    color: $sombrasBordes;
     margin-top: 10px;
     align-items: center;
     @include desktop{
