--- a/templates/contacto.html
+++ b/templates/contacto.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,7 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link rel="stylesheet" href="../Css/reset.css/reset.css">
     <link rel="shortcut icon" href="../banner/logo.png" type="image/x-icon">
-    <link rel="stylesheet" href="../Css/contacto.css">
+    <link rel="stylesheet" href="../Css/contacto/contacto.css">
 </head>
 <body>
   <header class="header">
@@ -34,13 +34,13 @@
         <div class="consult">
           <h2 class="form__title">Forumulario de contacto</h2>
           <form action="" class="form__container ">
-            <div class="form__input formName col-sm-12" >
+            <div class="form__input formName " >
               <label for="nombre">
                 <span>Nombre</span>
                 <input type="text" required autocomplete="name" name="nombre" id="nombre">
               </label>
             </div>
-            <div class="form__input formLastName col-12" >
+            <div class="form__input formLastName" >
               <label for="apellido">
                 <span>Apellido</span>
                 <input type="text" required  name="apellido" id="apellido">
