arreglo en sass, h1 de las 3paginas y agregué imports

--- a/scss/_products.scss
+++ b/scss/_products.scss
@@ -69,7 +69,7 @@
                     }
                     a{
                         align-self: center;
-                        
+                        margin-top: 1rem;
                     }
                 }
              }
