--- a/Css/style.css
+++ b/Css/style.css
@@ -1,4 +1,5 @@
 @charset "UTF-8";
+/* --------------index------------------- */
 body {
   font-family: "Roboto", sans-serif;
   background: radial-gradient(circle, #fff, #ccc);
@@ -292,6 +293,7 @@ body {
 }
 .products .detalle__producto .products__description .grillas .description a {
   align-self: center;
+  margin-top: 1rem;
 }
 .products .button-container {
   position: relative;
@@ -516,6 +518,471 @@ body {
   .rights {
     width: auto;
   }
+}
+
+/* ---------------productos----------------- */
+.product-container {
+  width: 90%;
+  margin: auto;
+  display: flex;
+  flex-direction: column;
+}
+
+.product {
+  display: flex;
+  height: 40vh;
+  width: 100%;
+  align-items: center;
+  justify-content: center;
+  margin-top: 1em;
+  border-top: 1px solid #887;
+}
+@media screen and (max-width: 870px) {
+  .product {
+    flex-direction: column;
+    height: fit-content;
+    flex-wrap: wrap;
+  }
+}
+.product .product__img {
+  width: 50%;
+  height: 100%;
+  padding: 2%;
+}
+@media screen and (max-width: 870px) {
+  .product .product__img {
+    width: 65%;
+  }
+}
+.product .product__img img {
+  width: 100%;
+  height: 100%;
+  align-self: center;
+  object-fit: contain;
+}
+.product .product__description {
+  width: 60%;
+  padding: 5%;
+}
+@media screen and (max-width: 870px) {
+  .product .product__description {
+    width: 100%;
+    padding: 2% 3%;
+  }
+}
+.product .product__description h1 {
+  font-size: 3em;
+  font-weight: bold;
+}
+.product .product__description h1::after {
+  content: "";
+  background-color: #51A3E1;
+  display: block;
+  width: 45px;
+  height: 5px;
+  margin-top: 10px;
+}
+.product .product__description .description {
+  line-height: 20px;
+  margin-top: 20px;
+  width: auto;
+}
+@media screen and (max-width: 870px) {
+  .product .product__description .description {
+    height: auto;
+    padding: 0;
+  }
+}
+
+.product-type {
+  padding: 0 2%;
+  margin-bottom: 1em;
+}
+@media screen and (max-width: 992px) {
+  .product-type {
+    height: auto;
+  }
+}
+@media screen and (max-width: 870px) {
+  .product-type {
+    width: 90%;
+    margin: 0 auto;
+  }
+}
+@media screen and (max-width: 576px) {
+  .product-type {
+    width: 100%;
+  }
+}
+.product-type .product__list {
+  border-top: 1px solid #887;
+  border-left: 1px solid #887;
+  border-right: 1px solid #887;
+  display: flex;
+  justify-content: space-evenly;
+  height: 240px;
+  align-items: center;
+}
+@media screen and (max-width: 992px) {
+  .product-type .product__list {
+    flex-direction: column;
+    height: auto;
+    border: 2px solid #000;
+    margin-bottom: 20px;
+    border-radius: 10px;
+  }
+}
+.product-type .product__list:last-child {
+  border-bottom: 1px solid #887;
+}
+.product-type .product__list .intro-img {
+  min-width: 400px;
+  min-height: 220px;
+}
+@media screen and (max-width: 992px) {
+  .product-type .product__list .intro-img {
+    background: url(../../banner/fondo_producto.jpg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    min-width: 100%;
+    box-shadow: 0px 1px 4px #000;
+    background-origin: border-box;
+  }
+}
+.product-type .product__list .intro-img img {
+  min-width: 100%;
+  max-height: 210px;
+  object-fit: contain;
+  transition: transform 0.5s;
+  filter: drop-shadow(2px 2px 6px #000);
+}
+.product-type .product__list .intro-img img:hover {
+  transform: scale(1.05);
+}
+@media screen and (max-width: 992px) {
+  .product-type .product__list .intro-img img {
+    backdrop-filter: blur(3px);
+    background-size: cover;
+  }
+}
+.product-type .product__list .article {
+  display: grid;
+  grid-template-columns: minmax(350px, 450px);
+  grid-template-rows: repeat(3, 4em);
+  padding: 30px;
+  align-items: center;
+}
+@media screen and (max-width: 992px) {
+  .product-type .product__list .article {
+    justify-items: center;
+  }
+}
+@media screen and (max-width: 576px) {
+  .product-type .product__list .article {
+    grid-template-columns: auto;
+    padding: 0;
+  }
+}
+.product-type .product__list .article .article__header {
+  justify-self: flex-start;
+}
+@media screen and (max-width: 992px) {
+  .product-type .product__list .article .article__header {
+    justify-self: center;
+  }
+}
+.product-type .product__list .article .article__header .article__title {
+  font-size: 2em;
+  text-shadow: 1px 1px 1px #887;
+}
+@media screen and (max-width: 1150px) {
+  .product-type .product__list .article .article__header .article__title {
+    font-size: 1.7em;
+  }
+}
+@media screen and (max-width: 576px) {
+  .product-type .product__list .article .article__header .article__title {
+    font-size: 1.3rem;
+  }
+}
+.product-type .product__list .article .intro-product {
+  padding-bottom: 1em;
+}
+@media screen and (max-width: 1150px) {
+  .product-type .product__list .article .intro-product {
+    padding: 0;
+  }
+}
+.product-type .product__list .article .intro-product p {
+  line-height: 25px;
+  width: 90%;
+}
+@media screen and (max-width: 1150px) {
+  .product-type .product__list .article .intro-product p {
+    line-height: normal;
+  }
+}
+@media screen and (max-width: 992px) {
+  .product-type .product__list .article .intro-product p {
+    text-align: center;
+    width: auto;
+  }
+}
+.product-type .product__list .article .article-consult {
+  margin-left: 0;
+}
+
+/* -----------------contacto------------------- */
+.contact__title {
+  height: 5em;
+  width: 100%;
+  background: #ccc;
+  margin-bottom: 1em;
+  border-bottom-left-radius: 50px;
+}
+.contact__title .contact__h1 {
+  padding-top: 0.3em;
+  font-size: 2em;
+  line-height: 1.5em;
+  margin-left: 5%;
+}
+.contact__title .contact__h1::after {
+  content: " ";
+  width: 45px;
+  height: 5px;
+  background-color: #51A3E1;
+  display: block;
+}
+
+.form__title {
+  color: #126482;
+  font-size: 1.5em;
+  font-weight: bold;
+}
+
+.contact__container {
+  background: url(../../banner/direccion.png);
+  height: 55em;
+  background-repeat: no-repeat;
+  width: 100%;
+  background-size: contain;
+}
+@media screen and (max-width: 1200px) {
+  .contact__container {
+    height: 70rem;
+  }
+}
+@media screen and (max-width: 576px) {
+  .contact__container {
+    height: 60rem;
+  }
+}
+.contact__container .form {
+  background: #fff;
+  width: 70%;
+  margin: auto;
+  height: 70vh;
+  border: 2px solid #ccc;
+  position: absolute;
+  left: 15%;
+  top: 75%;
+  display: flex;
+  align-items: center;
+}
+@media screen and (max-width: 1200px) {
+  .contact__container .form {
+    flex-direction: column;
+    height: 50rem;
+    top: 60%;
+    justify-content: space-evenly;
+  }
+}
+@media screen and (max-width: 576px) {
+  .contact__container .form {
+    position: relative;
+    width: 100%;
+    left: 0%;
+    top: 20%;
+  }
+}
+
+.consult {
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  justify-content: space-evenly;
+  padding: 0 20px;
+}
+@media screen and (max-width: 1200px) {
+  .consult {
+    width: 60%;
+    height: 20rem;
+    padding: 0;
+  }
+}
+@media screen and (max-width: 992px) {
+  .consult {
+    width: 80%;
+  }
+}
+@media screen and (max-width: 870px) {
+  .consult {
+    height: auto;
+  }
+}
+@media screen and (max-width: 768px) {
+  .consult {
+    width: 80%;
+  }
+}
+.consult .form__container {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(2, 3em) 6em 1.5em;
+  height: 60%;
+  width: 80%;
+  gap: 0.8em;
+}
+@media screen and (max-width: 1200px) {
+  .consult .form__container {
+    width: 100%;
+  }
+}
+@media screen and (max-width: 870px) {
+  .consult .form__container {
+    display: inline-block;
+    height: auto;
+  }
+}
+.consult .form__container .form__input {
+  width: 100%;
+  height: 3em;
+}
+@media screen and (max-width: 870px) {
+  .consult .form__container .form__input {
+    height: auto;
+    margin: 10px auto;
+  }
+}
+@media screen and (max-width: 992px) {
+  .consult .form__container .form__input label {
+    width: 100%;
+  }
+}
+@media screen and (max-width: 870px) {
+  .consult .form__container .form__input label {
+    display: flex;
+    flex-direction: column;
+    gap: 3px;
+  }
+}
+.consult .form__container .form__input label input {
+  border: none;
+  border-bottom: 2px solid #51A3E1;
+}
+.consult .form__container .form__input label input:focus {
+  outline: none !important;
+  background: linear-gradient(to bottom, transparent, #887);
+}
+@media screen and (max-width: 1200px) {
+  .consult .form__container .form__input label input {
+    width: 100%;
+  }
+}
+.consult .form__container .formName {
+  grid-column: 1/2;
+  grid-row: 1/2;
+}
+.consult .form__container .formLastName {
+  grid-column: 2/3;
+  grid-row: 1/2;
+}
+.consult .form__container .formEmail {
+  grid-column: 1/2;
+  grid-row: 2/3;
+}
+.consult .form__container .formPhone {
+  grid-column: 2/3;
+  grid-row: 2/3;
+}
+.consult .form__container .formQuery {
+  grid-column: 1/3;
+  grid-row: 3/4;
+}
+.consult .form__container .formQuery label {
+  width: 100%;
+}
+.consult .form__container .formQuery label textarea {
+  border: none;
+  border-bottom: 2px solid #51A3E1;
+  width: 100%;
+  height: 5em;
+  resize: none;
+}
+.consult .form__container .formQuery label textarea:focus {
+  outline: none !important;
+  background: linear-gradient(to bottom, transparent, #887);
+}
+.consult .form__container .formButton {
+  grid-column: 2/3;
+  grid-row: 4/5;
+  width: 70%;
+  margin-left: 30%;
+  border: none;
+}
+@media screen and (max-width: 1200px) {
+  .consult .form__container .formButton {
+    grid-column: 1/3;
+    justify-self: center;
+    align-self: center;
+    margin: 0;
+  }
+}
+@media screen and (max-width: 870px) {
+  .consult .form__container .formButton {
+    margin: 5px 0 0 25%;
+    width: 50%;
+  }
+}
+
+.address {
+  width: 50%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  padding: 55px 20px;
+  position: relative;
+}
+@media screen and (max-width: 1200px) {
+  .address {
+    margin-top: 1rem;
+    width: 60%;
+    height: 20rem;
+    padding: 0;
+  }
+}
+@media screen and (max-width: 992px) {
+  .address {
+    width: 80%;
+  }
+}
+.address .address__description {
+  margin-top: 11%;
+  line-height: 1.7em;
+}
+@media screen and (max-width: 1200px) {
+  .address .address__description {
+    margin-top: 3%;
+  }
+}
+.address .address__description span {
+  font-weight: bold;
+}
+.address .address__description > p:last-child {
+  color: #DB6221;
 }
 
 /*# sourceMappingURL=style.css.map */
