--- a/templates/contacto.html
+++ b/templates/contacto.html
@@ -2,13 +2,14 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Embragues Independencia</title>
+    <meta name="description" content="¡Estamos aquí para ayudarte! Ponte en contacto con nosotros a través de nuestro formulario y encuentra soluciones para tus necesidades de reparación y mantenimiento de embragues y frenos. Expertos en automoción listos para brindarte el mejor servicio">
+    <title>Consulta producto</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link rel="stylesheet" href="../Css/reset.css/reset.css">
     <link rel="shortcut icon" href="../banner/logo.png" type="image/x-icon">
-    <link rel="stylesheet" href="../Css/contacto/contacto.css">
+    <link rel="stylesheet" href="../Css/style.css">
 </head>
 <body>
   <header class="header">
@@ -27,7 +28,7 @@
   </header>
   <main class="main">
     <div class="contact__title">
-      <h2 class="contact__h2">Contacto</h2>
+      <h1 class="contact__h1">Contacto</h1>
     </div>
     <section class="contact__container">
       <div class="form">
