--- a/templates/productos.html
+++ b/templates/productos.html
@@ -2,13 +2,14 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Embragues Independencia</title>
+    <meta name="description" content="Encuentra la solución perfecta para tu vehículo en nuestra tienda de recambio y venta de embragues nuevos. Renueva el rendimiento de tu transmisión con productos de calidad y asesoramiento experto. Descubre la mejor selección para mantener tu conducción sin problemas">
+    <title>Embragues</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link rel="stylesheet" href="../Css/reset.css/reset.css">
     <link rel="shortcut icon" href="../banner/logo.png" type="image/x-icon">
-    <link rel="stylesheet" href="../Css/productos/embragues.css">
+    <link rel="stylesheet" href="../Css/style.css">
 </head>
 <body>
   <header class="header">
@@ -32,9 +33,9 @@
           <img src="../banner/productoEmbrague.png" alt="Embrague">
         </div>
         <div class="product__description product__description--products">
-          <h2>Embragues</h2>
+          <h1>Embragues</h1>
           <p class="description">En embragues independencia realizamos la venta de todo tipo de embragues por encargo, ya sea
-            autos, camionetas, camiones, maquinaria. También se realiza la reaparación de los mismos con garantía.
+            autos, camionetas, camiones, maquinaria. También se realiza la reaparación de los mismos con garantía más la rectificación del volante.
           </p>
         </div>
       </div>
